Design improvements for test conduct and reports.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -58,7 +58,6 @@
                         <div class="pull-right">
                             <em class="material-icons programming-guide" (click)="openProgramGuide()">help</em>
                         </div>
-                        <div class="clearfix"></div>
                         <div class="form-group display-inline-block mb30 mr20">
                             <label>Code Language</label>
                             <select name="languages" class="form-control small-width" [(ngModel)]="selectLanguage" (change)="changeLanguage($event.target.value)" [ngModelOptions]="{standalone:true}">
@@ -80,7 +79,7 @@
                                     class="code-editor">
                         </ace-editor>
                         <button type="button" class="btn btn-primary" value="run" (click)="runCode()">Run and Save</button>
-                        <pre class="mt20 text-white" [ngClass]="getColorCode()" *ngIf="codeResult != ''">{{codeResult}}</pre>
+                        <pre [ngClass]="getColorCode()" *ngIf="codeResult != ''">{{codeResult}}</pre>
                     </div>
                     <div class="display-table-cell ans-area ptb20 pl15" *ngIf="isQuestionSingleChoice && !isQuestionCodeSnippetType">
                         <md-radio-group>
@@ -100,7 +99,7 @@
     <div class="test-footer">
         <div class="test-footer-top ptb10">
             <div class="container-fluid">
-                <span class={{getQuestionStatus(testQuestion.questionStatus)}} *ngFor="let testQuestion of testQuestions; let i = index" (click)="navigateToQuestionIndex(i)">{{i+1}}</span>
+                <span class={{getQuestionStatus(testQuestion.questionStatus)}} *ngFor="let testQuestion of testQuestions; let i = index" [ngClass]="{'cursor-not-allowed':isCodeProcessing}"  (click)="navigateToQuestionIndex(i)">{{i+1}}</span>
             </div>
         </div>
         <div class="test-footer-bottom ptb10">
