confimation message added for unfinish report

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -34,12 +34,18 @@
                     <option value="4">Unfinished Test ({{unfinishedTestCount}})</option>
                     <option value="star">Starred Candidates ({{starredCandidateCount}})</option>
                 </select>
-                <button type="button" class="btn" (click)="downloadTestBasicDetails()" *ngIf="!noCandidateFound">Download Excel</button>
-                <button type="button" class="btn" (click)="downloadTestReportPdf()" *ngIf="!noCandidateFound">Download PDF</button>
-                <button type="button" class="btn" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Detailed Report</button>
-                <button type="button" class="btn" (click)="generateReportForUnfinishedTest()" *ngIf="showGenerateReportButton && !noCandidateFound">Generate Report</button>
+                <button type="button" class="btn visible-lg-inline-block" (click)="downloadTestBasicDetails()" *ngIf="!noCandidateFound">Download Excel</button>
+                <button type="button" class="btn visible-lg-inline-block" (click)="downloadTestReportPdf()" *ngIf="!noCandidateFound">Download PDF</button>
+                <button type="button" class="btn visible-lg-inline-block" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Detailed Report</button>
+                <button type="button" class="btn visible-lg-inline-block" (click)="generateReportForUnfinishedTest()" *ngIf="showGenerateReportButton && !noCandidateFound">Generate Report</button>
             </div>
             <a class="pull-right back-link mt10" [routerLink]="['/tests']">< back</a>
+        </div>
+        <div class="hidden-lg mt15">
+            <button type="button" class="btn" (click)="downloadTestBasicDetails()" *ngIf="!noCandidateFound">Download Excel</button>
+            <button type="button" class="btn" (click)="downloadTestReportPdf()" *ngIf="!noCandidateFound">Download PDF</button>
+            <button type="button" class="btn" (click)="getExcelDetails()" *ngIf="!noCandidateFound ">Download Detailed Report</button>
+            <button type="button" class="btn" (click)="generateReportForUnfinishedTest()" *ngIf="showGenerateReportButton && !noCandidateFound">Generate Report</button>
         </div>
         <div class="grid-container" *ngIf="!noCandidateFound">
             <table class="data-grid" [md2Data]="testAttendeeArray" #report="md2DataTable" [rowsPerPage]="10" [(activePage)]="activePage">
@@ -66,7 +72,7 @@
                         <td><progress *ngIf="testAttendee.generatingReport"></progress> {{testAttendee.report.totalMarksScored}}</td>
                         <td><progress *ngIf="testAttendee.generatingReport"></progress>{{testAttendee.report.percentage}}</td>
                         <td><a class="theme-text" *ngIf="testAttendee.report.isTestPausedUnWillingly" (click)="resumeTest(testAttendee)">Allow</a></td>
-                        <td class="text-right">
+                        <td class="actions text-right">
                             <em class="material-icons" [routerLink]="['individual-report/',testAttendee.id,'download']" *ngIf="isReportGenerated(testAttendee)">file_download</em>
                             <a class="display-inline-block ml15" [routerLink]="['individual-report/',testAttendee.id]"><em class="material-icons" *ngIf="isReportGenerated(testAttendee)">remove_red_eye</em></a>
                             <em class="material-icons" (click)="generateReportForUnfinishedTest(testAttendee)" *ngIf="!isReportGenerated(testAttendee)">insert_drive_file</em>
