--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -6,8 +6,8 @@
         <div class="title-area mb20 clearfix">
             <h1 class="pull-left">Questions</h1>
             <div class="search-area pull-right">
-                <input type="text" placeholder="Search questions" [(ngModel)]="matchString" (keyup)="getQuestionsMatchingSearchCriteria(matchString)" [hidden]="!showSearchInput" (blur)="showStatus()" name="search" id="search" #search/>
-                <button type="button" (click)="showSearchInput = true;selectTextArea($event,search)"><em class="material-icons">search</em></button>
+                <input type="text" placeholder="Search questions" [(ngModel)]="matchString" (keyup)="getQuestionsMatchingSearchCriteria(matchString)" [hidden]="!showSearchInput" (blur)="showStatus()" name="search" id="search" #search />
+                <button type="button" (click)="selectTextArea($event,search)"><em class="material-icons">search</em></button>
             </div>
         </div>
         <div class="main-block">
