--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
@@ -11,8 +11,8 @@
       <div class="pull-right">
         <button type="button" class="btn" (click)="downloadIndividualReport()"><em class="material-icons">file_download</em> Download</button>
         <button type="button" class="btn" (click)="printIndividualReport('printSectionId')"><em class="material-icons">print</em> Print</button>
-        <button type="button" class="btn" (click)="getAttendeeIdListOfTest()">Previous</button>
-        <button type="button" class="btn">Next</button>
+        <button type="button" class="btn" (click)="moveToPreviousIndividualReport()">Previous</button>
+        <button type="button" class="btn" (click)="moveToNextIndividualReport()">Next</button>
       </div>
     </div>
   </div>
